Enhance About Me section
- project: Rename the project from "Folium" to "Portare Folium" across various files, including `settings.gradle.kts`, `build.gradle.kts`, Android resources, and iOS/JVM/Web configurations.
- ui: Implement the "About Me" section, which now displays a personal introduction and a brief bio within a `Card`.
- feat: Add an interactive tooltip to the "Portare Folium" text in the About Me section, explaining the etymology of the name.
- layout: Make the main app content vertically scrollable to accommodate all sections.
- deps: Add the `compose.materialIconsExtended` dependency to use more icons.

--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -1,6 +1,6 @@
 TEAM_ID=
 
-PRODUCT_NAME=Folium
+PRODUCT_NAME=Portare Folium
 PRODUCT_BUNDLE_IDENTIFIER=com.promni.folium.Folium$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
