feat: Implement DI, data persistence, and localization framework
- di: Introduce Koin for dependency injection. Set up `initKoin` for initialization on all platforms (Android, iOS, JVM, Web) and create a `FoliumApplication` class on Android to manage the lifecycle.
- di: Create Koin modules, including a `viewModelModule` that provides the `SettingsViewModel`, and organize them in `AppModule.kt`.
- persistence: Implement data persistence for user preferences using KStore. Add platform-specific storage implementations for Android, iOS, JVM (`kstore-file`), and Web (`kstore-storage`).
- localization: Establish a localization framework using `CompositionLocalProvider`. `ProvideLanguage` and `localizedString` composables are introduced to supply strings based on the current language.
- deps: Add new dependencies for Koin (`koin-core`, `koin-android`, `koin-compose`), KStore (`kstore`, `kstore-file`, `kstore-storage`), and `multiplatform-paths` to support the new features.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,9 @@ kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
 material3WindowSizeClass = "1.9.0-beta06"
 navigationCompose = "2.9.1"
+kstore = "1.0.0"
+multiplatformPaths = "0.2.2"
+koin = "4.1.1"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -31,6 +34,14 @@ androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle
 kotlinx-coroutinesSwing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
 material3-windowsizeclass = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
 navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+kstore = { module = "io.github.xxfast:kstore", version.ref = "kstore" }
+kstore-file = { module = "io.github.xxfast:kstore-file", version.ref = "kstore" }
+kstore-storage = { module = "io.github.xxfast:kstore-storage", version.ref = "kstore" }
+multiplatform-paths = { module = "me.sujanpoudel.multiplatform.utils:multiplatform-paths", version.ref = "multiplatformPaths" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
