--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ composeMultiplatform = "1.9.1"
 junit = "4.13.2"
 kotlin = "2.2.20"
 kotlinx-coroutines = "1.10.2"
-material3WindowSizeClass = "1.9.0-beta06"
+material3WindowSizeClass = "1.9.0"
 navigationCompose = "2.9.1"
 kstore = "1.0.0"
 multiplatformPaths = "0.2.2"
