Refactor: Localize project roles and add new projects
- i18n: Externalize project role strings (`Owner & Developer`, `Lead/Senior Android Developer`, etc.) into `EnStrings.kt` and `DeStrings.kt` for localization.
- refactor(data): Update `ProjectItemData` to use the new `AppStringsId` type for the `role` field instead of a hardcoded string.
- refactor(ui): Modify the `Carousel` component to resolve role strings using the `localizedString` function.
- data: Add four new projects to the `projects` list: "bevRAGE", "GymBoom", "IpDigital", and "Lite PDF Reader".
- fix(android): Update the Android Manifest to use `Theme.App` for the main activity, removing the splash theme.

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:theme="@style/Theme.App.Splash">
         <activity
             android:exported="true"
-            android:theme="@style/Theme.App.Splash"
+            android:theme="@style/Theme.App"
             android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
