Feat: Implement deep linking for all platforms
- **navigation**: Introduce deep linking to allow opening project detail screens directly from external URLs.
- **feat(deep_link)**: Implement an `ExternalUriHandler` to process and cache incoming URIs until the navigation is ready. This ensures that deep links work even when the app is launched from a cold start.
- **android**: Configure `AndroidManifest.xml` with `intent-filter` to handle both custom scheme (`folium://`) and HTTPS URLs (`https://formakidov.github.io/Folium/project`). Update `MainActivity` to process incoming intents.
- **ios**: Add `CFBundleURLTypes` to `Info.plist` to register the `folium://` custom URL scheme. Update `iOSApp.swift` and `ContentView.swift` to handle incoming URLs.
- **web**: Integrate `bindToBrowserNavigation` in `webMain` to synchronize the Compose Navigation state with the browser's history and URL, enabling deep linking and back/forward navigation.
- **jvm**: Add argument and URI handling in `main.kt` to support deep linking on desktop platforms (specifically for macOS).

--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -4,5 +4,16 @@
 <dict>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>folium</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.promni.folium.Folium</string>
+		</dict>
+	</array>
 </dict>
 </plist>
